@@ -178,6 +178,8 @@ meme collection by adding
 .Dq avatar: filename.png
 to one's profile info.
 If truly necessary.
+A banner may be set by specifying
+.Dq banner: image.jpg .
 See
 .Xr honk 8
 for more about the funzone.
