@@ -56,6 +56,7 @@ type UserOptions struct {
 	Avahex     bool   `json:",omitempty"`
 	MentionAll bool   `json:",omitempty"`
 	Avatar     string `json:",omitempty"`
+	Banner     string `json:",omitempty"`
 	MapLink    string `json:",omitempty"`
 	Reaction   string `json:",omitempty"`
 	MeCount    int64
